- Ajout de DAO pour les users et les posts - Ajout de deux vue pour les users (list, item)

--- a/src/main/resources/templates/post/new_post.html
+++ b/src/main/resources/templates/post/new_post.html
@@ -2,15 +2,33 @@
 
 <h1>Création d'un nouveau post</h1>
 <form action="#" th:action="@{/newpost}" th:object="${post}" method="post" xmlns:th="http://www.w3.org/1999/xhtml">
-    <label>Title : <input type="text" th:field="*{title}"/></label><br/>
-    <label>Content : <input type="text" th:field="*{content}"/></label><br/>
 
-    <label>Catégorie :
-        <select name="category_id" th:field="*{categoryId}">
-            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">1</option>
-        </select>
-    </label><br/>
+    <div class="row">
+        <div class="large-12 columns">
+            <label>Titre :
+                <input type="text" th:field="*{title}"/>
+            </label>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="large-12 columns">
+            <label>Catégorie :
+                <select name="category_id" th:field="*{categoryId}">
+                    <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">1
+                    </option>
+                </select>
+            </label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="large-12 columns">
+            <label>Content :
+                <input type="text" th:field="*{content}"/>
+            </label>
+        </div>
+    </div>
 
     <p><input type="submit" value="Envoyer"/> <input type="reset" value="Réinitialiser"/></p>
 </form>
