--- a/src/main/resources/templates/user/user_item.html
+++ b/src/main/resources/templates/user/user_item.html
@@ -5,7 +5,7 @@
 
 <div th:fragment="user_item">
     <td th:text="${user.id}">Smith</td>
-    <td th:text="${user.user_name}">John</td>
+    <td th:text="${user.userName}">John</td>
 </div>
 
 </html>
