--- a/src/main/resources/templates/post/posts_list.html
+++ b/src/main/resources/templates/post/posts_list.html
@@ -1,5 +1,5 @@
 <table xmlns:th="http://www.w3.org/1999/xhtml">
-    <thead><tr><th>Derniers posts</th></tr></thead>
+    <!--<thead><tr><th>Derniers posts</th></tr></thead>-->
     <tbody>
         <tr th:each="post : ${posts}" th:include="post/post_item :: post_item">
         </tr>
