--- a/src/main/resources/templates/comment/comment_item.html
+++ b/src/main/resources/templates/comment/comment_item.html
@@ -7,9 +7,9 @@
     <td th:text="${comment.id}">John</td>
     <td th:text="${comment.content}">John</td>
     <td th:text="${comment.date}">John</td>
-    <td th:text="${comment.post_id}">John</td>
-    <td th:text="${comment.user_id}">John</td>
-    <td th:text="${comment.validated_id}">John</td>
+    <td th:text="${comment.postId}">John</td>
+    <td th:text="${comment.userId}">John</td>
+    <td th:text="${comment.validated}">John</td>
 </div>
 
 </html>
