--- a/src/main/resources/templates/post/new_post.html
+++ b/src/main/resources/templates/post/new_post.html
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="large-12 columns">
-            <>Titre :
+            <label>Titre :
             <input ng-model="form.title" type="text"/>
             </label>
         </div>
