Gestion des utilisateurs depuis le plugin google. Dès qu'un utilisateur se connecte grace au plugin, on l'ajoute à la base de données en tant qu'utilisateur basique.
+ Diverses modifications

--- a/src/main/resources/templates/post/post_item.html
+++ b/src/main/resources/templates/post/post_item.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-
-<div th:fragment="post_item">
+<div xmlns:th="http://www.w3.org/1999/xhtml" th:fragment="post_item">
     <td th:text="${post.id}">1</td>
     <a th:text="${post.title}" th:id="${post.id}" ng-click="postDetails($event)">Un simple post</a>
     <td th:text="${post.categoryName}">Voyage</td>
     <td th:text="${post.content}">Blablabla blablabla</td>
 </div>
-
-</html>
