--- a/src/main/resources/templates/post/new_post.html
+++ b/src/main/resources/templates/post/new_post.html
@@ -6,15 +6,13 @@
 <form ng-submit="submit()" ng-controller="NewPostController" xmlns:th="http://www.w3.org/1999/xhtml">
 
     <div class="row">
-        <div class="large-12 columns">
+        <div class="large-8 columns">
             <label>Titre :
             <input ng-model="form.title" type="text"/>
             </label>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="large-12 columns">
+        <div class="large-4 columns">
             <label>Catégorie :
                 <select ng-model="form.categoryId" name="category_id">
                     <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">1
@@ -27,10 +25,15 @@
     <div class="row">
         <div class="large-12 columns">
             <label>Content :
-                <input ng-model="form.content" type="text"/>
+                <textarea ng-model="form.content"></textarea>
             </label>
         </div>
     </div>
 
-    <p><input type="submit" id="submit" value="Envoyer"/> <input type="reset" value="Réinitialiser"/></p>
+    <div class="row">
+        <div class="large-12 columns">
+            <input type="submit" id="submit" value="Envoyer" class="button succes"/>
+            <input type="reset" value="Réinitialiser" class="button alert"/>
+        </div>
+    </div>
 </form>
