--- a/src/main/resources/templates/user/new_user.html
+++ b/src/main/resources/templates/user/new_user.html
@@ -1,14 +1,18 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Getting Started: Handling Form Submission</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    </head>
-    <body>
-        <h1>Form</h1>
-        <form action="#" th:action="@{/newuser}" th:object="${user}" method="post">
-            <p>UserName: <input type="text" th:field="*{userName}" /></p>
-            <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-        </form>
-    </body>
-</html>
+<form ng-submit="submit($event)" ng-controller="NewUserController">
+
+    <div class="row">
+        <div class="large-12 columns">
+            <label>Pseudo :
+                <input ng-model="form.username" type="text"/>
+            </label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="large-12 columns">
+            <input type="submit" id="submit" value="Envoyer" class="button succes"/>
+            <input type="reset" value="Réinitialiser" class="button alert"/>
+        </div>
+    </div>
+
+</form>
