Finalisation de l'application.

--- a/src/main/resources/templates/comment/new_comment.html
+++ b/src/main/resources/templates/comment/new_comment.html
@@ -14,5 +14,8 @@
         </div>
     </div>
 
-    <p><input type="submit" id="submit" value="Envoyer"/> <input type="reset" value="Réinitialiser"/></p>
+    <p>
+        <input type="submit" id="submit" value="Envoyer" class="button succes"/>
+        <input type="button" ng-click="reset()" value="Réinitialiser" class="button alert"/>
+    </p>
 </form>
