--- a/src/main/resources/templates/user/new_user.html
+++ b/src/main/resources/templates/user/new_user.html
@@ -10,8 +10,8 @@
 
     <div class="row">
         <div class="large-12 columns">
-            <input type="submit" id="submit" value="Envoyer" class="button succes"/>
-            <input type="reset" value="Réinitialiser" class="button alert"/>
+            <input type="submit" id="submit" value="Envoyer" class="button succes tiny"/>
+            <input type="button" ng-click="reset()" value="Réinitialiser" class="button alert tiny"/>
         </div>
     </div>
 
