--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -13,3 +13,7 @@ input[type="time"], input[type="url"], input[type="color"], textarea {
 textarea {
     max-width: 100%;
 }
+
+.inline {
+    display: inline-block;
+}
