--- a/src/main/resources/templates/post/new_post.html
+++ b/src/main/resources/templates/post/new_post.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="large-12 columns">
-            <label>Content :
+            <label>Contenu :
                 <textarea ng-model="form.content"></textarea>
             </label>
         </div>
@@ -33,7 +33,7 @@
     <div class="row">
         <div class="large-12 columns">
             <input type="submit" id="submit" value="Envoyer" class="button succes"/>
-            <input type="reset" value="Réinitialiser" class="button alert"/>
+            <input type="button" ng-click="reset()" value="Réinitialiser" class="button alert"/>
         </div>
     </div>
 </form>
