--- a/src/main/resources/templates/post/posts_list_with_addition.html
+++ b/src/main/resources/templates/post/posts_list_with_addition.html
@@ -1,4 +1,5 @@
 <div class="large-9 columns">
+    <div class="button expand" id="add_post_button_ng" ng-click="addNewPostForm()">Ajouter un nouveau post</div>
 
     <table xmlns:th="http://www.w3.org/1999/xhtml">
         <tbody role="content">
