--- a/src/main/resources/templates/user/user_logged_in.html
+++ b/src/main/resources/templates/user/user_logged_in.html
@@ -1,3 +1,3 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml" th:fragment="user_item">
-    <p>Bienvenu <span th:text="${user.userName}">Smith</span>!</p>
+    <p>Bienvenue <span th:text="${user.userName}">Smith</span>!</p>
 </div>
